# finance-copilot

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  financecopilot.db  pyproject.toml  test_pydantic.py
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  20260605_0b1d902eefc9_initial.py  20260606_7ae3fad8e906_add_transactions_table.py  20260607_18f9c812a635_add_portfolio_tables.py  20260624_a1b2c3d4e5f6_add_goals_table.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/core/: __init__.py  exceptions.py  rate_limiter.py  security.py
backend/app/models/: __init__.py  category.py  goal.py  holding.py  portfolio_snapshot.py  transaction.py  user.py  watchlist.py
backend/app/modules/auth/: repository.py  router.py  service.py
backend/app/modules/goals/: repository.py  router.py  service.py
backend/app/modules/portfolio/: repository.py  router.py  service.py
backend/app/modules/transactions/: repository.py  router.py  service.py
backend/app/schemas/: auth.py  goal.py  holding.py  transaction.py  watchlist.py
backend/app/utils/: date_helpers.py  pagination.py
backend/scripts/: seed_categories.py
backend/tests/: conftest.py  test_auth.py  test_transactions.py
frontend/: .eslintrc.json  .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  goals.ts  portfolio.ts  transactions.ts  watchlist.ts
(+64 files in other folders)
